style.css
*, *::before, *::after {
  box-sizing: border-box;
}

*:not(dialog) {
  margin: 0;
}

img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}

input, button, textarea, select {
  font: inherit;
}

p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}

p {
  text-wrap: pretty;
}
h1, h2, h3, h4, h5, h6 {
  text-wrap: balance;
}

:root {
    --clr-white: #FCFAFA;
    --clr-player1: #2932e1;
    --clr-player2: #008566;
    --clr-bright: #c2008b;
    --clr-primary: #271c3f;
    --clr-primary-dark: #1d142f;
    --clr-primary-light: #40315c;

    --ff-xo: "Doxent", Arial, sans-serif;
    --ff-body: "Work Sans", Arial, sans-serif;

    --fs-body: 16px;
    --fs-h1: 2.5em;
    --fs-h2: 1.5em;
    --fs-message: 1.5em;

    --fw-bold: 700;

    --padding-standard: 10px;

    --board-width: calc((110px * 3) + (5px * 2));
}

@font-face {
  font-family: 'Doxent';
  src: url('fonts/Doxent-Regular.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

body {
  line-height: 1.5;
  font-size: var(--fs-body);
  -webkit-font-smoothing: antialiased;
  font-family: var(--ff-body);
  display: flex;
  justify-content: center;
  background-color: var(--clr-primary-dark);
  color: var(--clr-white);
  overflow: hidden;
}

h1 {
    font-family: var(--ff-xo);
    text-transform: uppercase;
    font-size: var(--fs-h1);
    letter-spacing: 2px;
}

.container {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100vh;
    width: clamp(calc(var(--board-width) + (var(--padding-standard) * 2)), 50vw, 370px);
    margin: 10px;
    padding: var(--padding-standard);
}

.game-initializer,
main {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100%;
    width: 100%;
}

.game-initializer .floater {
    margin: 50px;
    padding: var(--padding-standard);
    background-color: var(--clr-primary);
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    border-color: transparent;
    border-radius: 10px;
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

p.token {
    text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
                 0px 8px 13px rgba(0,0,0,0.1),
                 0px 18px 23px rgba(0,0,0,0.1);
}

label {
    text-transform: uppercase;
    letter-spacing: 1.5px;
    font-size: var(--fs-h2);
    font-weight: var(--fw-bold);
    margin: 10px;
    margin-top: 24px;
}

input {
    color: inherit;
    background-color: var(--clr-primary-light);
    border-color: transparent;
    border-radius: 20px;
    margin-bottom: 10px;
    text-align: center;
}

input:focus,
input:focus-visible {
    outline: none;
}

input.invalid {
    border: 1px solid var(--clr-white);
}

.validation {
    font-size: var(--fs-body);
    color: var(--clr-white);
    min-height: 1.5em;
}

.icon-picker {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    height: 75px;
    margin: 7px 0 7px 0;
}

.game-initializer > form:not(.disabled) {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
}

button > img {
    width: 100%;
}

.icon-picker > button.icon {
    background-color: transparent;
    border: transparent;
    border-radius: 50%;
    padding: 0;
    margin: 4px;
    width: 50px;
    height: 50px;
    cursor: pointer;
    transition:  height 0.5s ease, width 0.5s ease;
}

.icon-picker > button:hover {
    height: 65px;
    width: 65px;
    transition: height 0.5s ease-in-out, width 0.5s ease-in-out;
}

.icon-picker > button.chosen {
    height: 65px;
    width: 65px;
}

button.action, .restartBtn {
    text-transform: uppercase;
    letter-spacing: 1.5px;
    font-weight: var(--fw-bold);
    height: 40px;
    width: 200px;
    padding: 4px;
    margin: 4px;
    background-color: var(--clr-bright);
    border: transparent;
    border-radius: 5px;
    color: var(--clr-white);
    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
}

.board {
    display: grid;
    grid-template: repeat(3, 110px) / repeat(3, 110px);
    align-content: center;
    gap: 5px;
    margin-bottom: 120px;
}

.box {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: var(--clr-primary);
    border: transparent;
    border-radius: 5px;
    cursor: pointer;
    width: 100%;
    height: 100%;
}

[class*="player"],
.token {
    font-family: var(--ff-xo);
    font-size: 90px;
    line-height: 1;
    padding: 7px 7px 0px 16px;
    text-align: center;
    transition: font-size ease 0.3s;
}

main [class*="player"] {
    color: var(--clr-white);
}

.player-one::after {
    content: "X";
}

.player-two::after {
    content: "O";
}

main {
    display: flex;
    justify-content: flex-start;
}

.scoreboard {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 10px;
    height: 200px;
    width: 100%;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-around;
    margin-bottom: 75px;
    margin-top: 50px;
}

div.p1 { grid-area: 1 / 1 / 3 / 2; }
div.p2 { grid-area: 1 / 2 / 3 / 3; }

div.p1,
div.p2 {
    display: grid;
    grid-template-rows: 100px 1fr;
    gap: 5px;
    justify-items: center;
    align-items: center;
}

.scoreboard img {
    justify-self: center;
    height: 65px;
    width: 65px;
    transition: height ease 0.5s, width ease 0.5s;
}

.icon-p1 > img.active,
.icon-p2 > img.active {
    height: 100px;
    width: 100px;
    transition: height ease 0.5s, width ease 0.5s;
}

div.p1 > p,
div.p2 > p {
    display: inline;
    font-family: var(--ff-xo);
    text-align: center;
}

p.name { font-size: 20px }
p.score { font-size: 50px; }
p.name.active { 
    color: var(--clr-bright);
    transition: font-weight 0.3s linear, color 0.3s linear;
}

.main-message,
.results-message {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 50px;
}

.blur-overlay {
    position: fixed;
    inset: 0;
    backdrop-filter: blur(5px);
    -webkit-backdrop-filter: blur(10px);
    background-color: rgba(0, 0, 0, 0.3);
    z-index: 1;
}

.results-conveyor {
    display: flex;
    flex-direction: column;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    height: 300px;
    width: 400px;
    z-index: 2;
    justify-content: center;
    align-items: center;
    padding: 40px;

    -webkit-mask-image: 
    linear-gradient(to bottom, transparent, black 40px),
    linear-gradient(to top, transparent, black 40px),
    linear-gradient(to right, transparent, black 40px),
    linear-gradient(to left, transparent, black 40px);
  
    mask-image: 
    linear-gradient(to bottom, transparent, black 40px),
    linear-gradient(to top, transparent, black 40px),
    linear-gradient(to right, transparent, black 40px),
    linear-gradient(to left, transparent, black 40px);

    -webkit-mask-composite: source-in;
    mask-composite: intersect; 
}

.final-results {
    position: fixed;
    inset: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.bg-layer {
    position: fixed;
    inset: 0;
    width: 100vw;
    z-index: 1;
    pointer-events: none;
}

.emoji {
    position: absolute;
    object-fit: cover;
    z-index: 1;
}

.results-layer {
    display: flex;
    flex-direction: column;
    justify-items: center;
    align-items: center;
    z-index: 2;
    background-color: rgba(29, 20, 47, 0.2);
    backdrop-filter: blur(10px);
    padding: 40px;
    border-radius: 20px;

    -webkit-mask-image: 
        linear-gradient(to bottom, transparent, black 40px),
        linear-gradient(to top, transparent, black 40px),
        linear-gradient(to right, transparent, black 40px),
        linear-gradient(to left, transparent, black 40px);
    
    mask-image: 
        linear-gradient(to bottom, transparent, black 40px),
        linear-gradient(to top, transparent, black 40px),
        linear-gradient(to right, transparent, black 40px),
        linear-gradient(to left, transparent, black 40px);

    -webkit-mask-composite: source-in;
    mask-composite: intersect;
}

.results-message {
    font-size: var(--fs-h2);
    font-weight: var(--fw-bold);
    text-align: center;
}

.drumroll {
    font-size: var(--fs-h2);
    margin-bottom: 10px;
}

.victor {
    font-size: var(--fs-h1);
    font-weight: var(--fw-bold);
    font-family: var(--ff-xo);
    text-align: center;
}

.restartBtn {
    text-decoration: none;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 5px;
    z-index: 2;
}

.disabled {
    display: none;
}

